Add green border to input when scan detects barcode

--- a/webapp/test/testFLPService.html
+++ b/webapp/test/testFLPService.html
@@ -42,6 +42,12 @@
 			sap.ui.getCore().AppContext.immoId = 0;
 			
 		</script>
+		
+		<style>
+			.inputOk{
+				border: solid green ;
+			}
+		</style>
 	</head>
 
 	<body class="sapUiBody" id="app" rootUiArea >
